programs/2-typecheck/invalid/example/4.4-binaryexp2.go
// invalid binary exp: ||
package test

var a bool = "true" || false;